[tool.poetry]
name = "telegram-scheduling"
version = "0.1.0"
description = ""
authors = ["nicolas <ns.seiller@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^13.0"
arrow = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
